# hexchess

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.txt
client-cpp/: CMakeLists.txt
client-cpp/src/: asio.cpp  asio.hpp  asio.tpp  boardscene.cpp  boardscene.hpp  buttonswidget.cpp  buttonswidget.hpp  clientcontroller.cpp  clientcontroller.hpp  controlwindow.cpp  controlwindow.hpp  graphicpeace.hpp  graphicpiece.hpp  interfaceasio.cpp  interfaceasio.hpp  interfaceqt.hpp  main.cpp  matchlistwidget.cpp  matchlistwidget.hpp  matchwidget.cpp  matchwidget.hpp  threadcheck.hpp
cmake/: compile.cmake  qt.cmake  set.cmake
docs/: client.drawio  layout.drawio
libhexchess/: CMakeLists.txt  constants.hpp  field_ranges.cpp  field_ranges.hpp  future.hpp  packetsocketoperations.cpp  packetsocketoperations.hpp  protocol.hpp  protocolallboardpeaces.cpp  protocolallboardpieces.cpp  static_objects.hpp  types.hpp
server/: CMakeLists.txt
server/src/: board.cpp  board.hpp  cell.hpp  figure.hpp  figures.hpp  figurespositions.hpp  idpool.cpp  idpool.hpp  main.cpp  matchcontrol.cpp  matchcontrol.hpp  movement.cpp  movement.hpp  sessionscontrol.cpp  sessionscontrol.hpp
tests/: CMakeLists.txt
tests/displayBoard_debug/: CMakeLists.txt  displayBoard.cpp
tests/displayWidgets_debug/: CMakeLists.txt  display.cpp
tests/test_allPiecesProtocol/: CMakeLists.txt  test_allPiecesProtocol.cpp
tests/test_board_getColumn/: CMakeLists.txt  test_board_getColumn.cpp
